search enpoints modified and refactorings done